# rename-invoice

./: .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install_context.bat  install_context.ps1  rename_invoice.bat  rename_invoice.py  requirements.txt  test_parser.py  uninstall_context.bat  uninstall_context.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: test.yml
accounting/: __main__.py  db.py  extractor.py  models.py  settings.py  storage.py
accounting/services/: invoice_service.py  project_service.py
accounting/ui/: app.py  dialogs.py  main_view.py  project_view.py  state.py  trash_view.py
accounting/ui/widgets/: amount_text.py  editable_cell.py  status_chip.py
assets/: generate_icon.py
docs/superpowers/plans/: 2026-05-09-account-manager-m1.md  2026-05-09-account-manager-m2.md
docs/superpowers/specs/: 2026-05-09-account-manager-design.md
rust/: Cargo.toml  README.md  build.rs
rust/scripts/: fetch_pdfium.ps1
rust/src/: amount.rs  extract.rs  install.rs  log_audit.rs  main.rs  pdf.rs  process.rs  silent.rs  summary.rs  xlsx.rs
rust/ui/: summary.slint
tests/: conftest.py  test_db.py  test_extractor.py  test_invoice_service.py  test_models.py  test_project_service.py  test_settings.py  test_smoke.py  test_storage.py  test_ui_state.py  test_ui_widgets.py
